podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servico-podinfo
spec:
  type: NodePort
  selector:
    app: podinfo
  ports:
    - port: 9898
      targetPort: 9898
      nodePort: 30005 # porta fixa para acesso no navegador
