podinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: podinfo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servico-podinfo
                port:
                  number: 9898
